# dti-shnet

./: README.md  environment.yml  pyproject.toml  requirements.txt
dti_shnet/: constants.py  dataset.py  export_dwi.py  infer.py  io.py  prepare_shmeta.py  preprocess.py  protocol.py  sh.py  spatial.py  train.py
dti_shnet/evaluation/: _postprocess_common.py  dti.py  noddi.py  visual.py
dti_shnet/models/: unet3d.py
scripts/: 0_prepare.sh  1_train_main.sh  2_test_main.sh  3_run_postprocess_main.sh  run_from_scratch.ipynb
splits/: eval_id.txt
