[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dti-shnet"
version = "0.1.0"
description = "DTI-guided volumetric spherical harmonics regression for single-to-multi-shell dMRI synthesis"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["dti_shnet*"]
